# swagger.yml
@@ -58,6 +58,8 @@ paths:
             items:
               type: number
               format: float
+      security:
+        - basic: []
 
   /slice_metric:
     get:
@@ -98,3 +100,10 @@ paths:
             items:
               type: number
               format: float
+      security:
+        - basic: []
+
+  securityDefinitions:
+    basic:
+      type: basic
+      x-basicInfoFunc: api.basic_auth
